# WeShare_BE

./: .gitignore  .python-version  README.md  manage.py  nohup.out  pyproject.toml  pytest.ini  schema.yml
.github/workflows/: cd.yml  ci.yml
apps/groups/: models.py  serializers.py  urls.py  views.py
apps/groups/migrations/: 0001_initial.py
apps/shared/: apps.py  models.py  repository.py  serializers.py  services.py  table_setup.py  urls.py  utils.py  views.py
apps/shared/migrations/: 0001_initial.py  0002_rename_item_id_rentalrecord_item_and_more.py
apps/users/: auth_backends.py  models.py  oauth_views.py  serializers.py  urls.py  views.py
apps/users/auth/: kakao.py  naver.py  views.py
apps/users/management/commands/: create_dummy_data.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_nickname_user_kakao_id_and_more.py  0002_user_kakao_id.py
apps/users/services/: auth_service.py
config/: settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py
core/: database.py
envs/: .env.local
test_app/: models.py  service.py  urls.py  views.py
test_app/migrations/: 0001_initial.py  0002_alter_user_username_alter_user_table.py
tests/: api_test.py
