[project]
name = "weshare"
version = "0.1.0"
description = ""
authors = [
    {name = "jiwon hwang",email = "realjiwon98@naver.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "django (>=5.1.5,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.1"

